Minor changes to service list and appointment

--- a/portal/admin/src/app/components/tables/service-list/service-list.component.html
+++ b/portal/admin/src/app/components/tables/service-list/service-list.component.html
@@ -49,7 +49,7 @@
                 <button mat-icon-button color="primary" (click)="onEdit(element)" matTooltip="Edit">
                   <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button color="warn" (click)="onDelete(element.id)" matTooltip="Delete">
+                <button mat-icon-button color="warn" (click)="onDelete(element._id)" matTooltip="Delete">
                   <mat-icon>delete</mat-icon>
                 </button>
               </div>
@@ -73,7 +73,7 @@
             <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Service TA/DA </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
               <span class="mobile-label">Service TA/DA : </span>
-              {{element.serviceTaDa_text}}
+              {{element.serviceTA_text}} / {{element.serviceDA_text}}
             </mat-cell>
           </ng-container>
           <ng-container matColumnDef="serCharge">
@@ -87,7 +87,7 @@
             <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Total Amount </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
               <span class="mobile-label">Total Amount : </span>
-              {{element.serviceTotal_text}}
+              {{element.serviceTAtotal_text}} / {{element.serviceDAtotal_text}}
             </mat-cell>
           </ng-container>
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
