--- a/portal/admin/src/app/components/tables/service-list/service-list.component.html
+++ b/portal/admin/src/app/components/tables/service-list/service-list.component.html
@@ -69,13 +69,6 @@
               {{element.serviceNameHindi_text}}
             </mat-cell>
           </ng-container>
-          <ng-container matColumnDef="serTaDa">
-            <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Service TA/DA </mat-header-cell>
-            <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
-              <span class="mobile-label">Service TA/DA : </span>
-              {{element.serviceTA_text}} / {{element.serviceDA_text}}
-            </mat-cell>
-          </ng-container>
           <ng-container matColumnDef="serCharge">
             <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Service Charge </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
@@ -83,11 +76,18 @@
               {{element.serviceCharge_text}}
             </mat-cell>
           </ng-container>
+          <ng-container matColumnDef="serTaDa">
+            <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Travelling Allowance </mat-header-cell>
+            <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
+              <span class="mobile-label">Travelling Allowance : </span>
+              {{element.serviceTA_text}}
+            </mat-cell>
+          </ng-container>
           <ng-container matColumnDef="serTotalAmount">
             <mat-header-cell fxLayoutAlign="center center" *matHeaderCellDef> Total Amount </mat-header-cell>
             <mat-cell fxLayoutAlign="center center" *matCellDef="let element">
               <span class="mobile-label">Total Amount : </span>
-              {{element.serviceTAtotal_text}} / {{element.serviceDAtotal_text}}
+              {{element.serviceTAtotal_text}}
             </mat-cell>
           </ng-container>
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
