1.Added new logo. 2. Included new fields in Booking, added pdf view, session update and cancellation with fee

--- a/portal/admin/src/app/authorization/sign-in/sign-in.component.html
+++ b/portal/admin/src/app/authorization/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="outer" fxLayout="row" fxLayoutAlign="center center">
   <div id="template_card" fxLayout="column" fxLayoutAlign="start center" fxHide.sm fxHide.xs fxShow.md fxShow.lg
     fxShow.xl>
-    <img style="height: 60px;" src="../../../assets/images/med_logo.png">
+    <img style="height: 60px;" src="../../../assets/images/logo.png">
     <p style="text-align: center; font-size: 18px; color: #ffffff">
       Stay Connected with Medservice!
     </p>
@@ -19,7 +19,7 @@
     </button>
   </div>
   <div class="sign_in_card" fxLayout="column" fxLayoutAlign="center center">
-    <img style="height: 40px; margin-bottom: 25px;" src="../../../assets/images/med_logo.png" fxHide.lg fxHide.xl fxHide.md fxShow.sm fxShow.xs>
+    <img style="height: 40px; margin-bottom: 25px;" src="../../../assets/images/logo.png" fxHide.lg fxHide.xl fxHide.md fxShow.sm fxShow.xs>
     <p style="font-size: 18px; margin: 0px">
       Hey there! Welcome back.
     </p>
