--- a/portal/admin/src/app/authorization/authorization.component.html
+++ b/portal/admin/src/app/authorization/authorization.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="container" fullscreen>
   <mat-sidenav [mode]="sideNavMode" class="sidenav" #sidenav [opened]="sideNavOpened" style="overflow: hidden;">
     <mat-toolbar color="primary" class="mat-elevation-z4">
-      <img style="margin-right: 10px;" src="./../../assets/images/med_logo.png" width="36px">
+      <img style="margin-right: 10px;" src="./../../assets/images/logo.png" width="36px">
       <h1 style="font-size: 26px; font-family: Roboto;color:white;margin-top: 8px;">
         MED
         <span style="font-size: 20px;">Service</span>
@@ -13,7 +13,7 @@
     <mat-drawer-container fullscreen>
       <mat-drawer mode="side" #drawer class="drawer" [opened]="matDrawerOpened" style="overflow: hidden;">
         <mat-toolbar color="primary" class="mat-elevation-z4">
-          <img src="./../../assets/images/med_logo.png" width="36px">
+          <img src="./../../assets/images/logo.png" width="36px">
         </mat-toolbar>
         <app-sidemenu  [menus]="menuElements" [iconOnly]="true"></app-sidemenu>
       </mat-drawer>
