--- a/portal/admin/src/app/element-core/user-menu/user-menu.component.html
+++ b/portal/admin/src/app/element-core/user-menu/user-menu.component.html
@@ -2,7 +2,7 @@
   <button mat-button (click)="isOpen = !isOpen" class="toolbar-user-btn" [class.open]="isOpen" [ngStyle.xs]="{'min-width': '70px'}">
     <span fxLayout="row" fxLayoutAlign="start center">
       <!-- <img class="avatar" [src]="currentUser?.photoURL || ''"> TODO: -->
-      <img class="avatar" src='../../../assets/images/med_logo.png'>
+      <img class="avatar" src='../../../assets/images/logo.png'>
       <span class="name" fxHide fxShow.gt-xs>{{currentUser?.currentUserName || uName}}</span>
       <mat-icon class="icon" fxHide fxShow.gt-xs>keyboard_arrow_down</mat-icon>
     </span>
