minor changes in service provider

--- a/portal/service_provider/src/app/authorization/authorization.component.html
+++ b/portal/service_provider/src/app/authorization/authorization.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="container" fullscreen>
   <mat-sidenav [mode]="sideNavMode" class="sidenav" #sidenav [opened]="sideNavOpened" style="overflow: hidden;">
     <mat-toolbar fxLayoutAlign="center center" color="primary" class="mat-elevation-z4">
-      <img src="./../../assets/images/ohzas.png" width="50x">
+      <img src="https://medix.xlayer.in/service/assets/images/ohzas.png" width="50x">
       <!-- <div fxLayout="column">
         <a style="font-size: 26px; font-family: Roboto;color:white;
             text-align: center; margin-top: 8px;">
@@ -19,7 +19,7 @@
     <mat-drawer-container fullscreen>
       <mat-drawer mode="side" #drawer class="drawer" [opened]="matDrawerOpened" style="overflow: hidden;">
         <mat-toolbar style="padding: 0px;" color="primary" class="mat-elevation-z4">
-          <img src="./../../assets/images/ohzas.png" width="80px">
+          <img src="https://medix.xlayer.in/service/assets/images/ohzas.png" width="80px">
           <!-- <a style="font-size: 16px; font-family: Roboto;color:white;
             text-align: center; margin-top: 8px;">
             MTIME
