--- a/portal/service_provider/src/app/authorization/sign-up/sign-up.component.html
+++ b/portal/service_provider/src/app/authorization/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 <div class="outer" fxLayout="row" fxLayoutAlign="center center">
   <div id="template_card" fxLayout="column" fxLayoutAlign="start center" fxHide.sm fxHide.xs fxShow.md fxShow.lg
     fxShow.xl>
-    <img style="height: 60px;" src="../../../assets/images/ohzas.png">
+    <img style="height: 60px;" src="https://medix.xlayer.in/service/assets/images/ohzas.png">
     <p style="text-align: center; font-size: 18px; color: #ffffff">
       Stay Connected with Ohzas!
     </p>
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="sign_in_card" fxLayout="column" fxLayoutAlign="center center">
-    <img style="height: 40px; margin-bottom: 5px;" src="../../../assets/images/ohzas.png" fxHide.lg fxHide.xl fxHide.md
+    <img style="height: 40px; margin-bottom: 5px;" src="https://medix.xlayer.in/service/assets/images/ohzas.png" fxHide.lg fxHide.xl fxHide.md
       fxShow.sm fxShow.xs>
     <p style="font-size: 18px; margin: 0px">
       Hey there! Welcome back.
