--- a/static/Registration/RegImgForm/src/app/app.component.html
+++ b/static/Registration/RegImgForm/src/app/app.component.html
@@ -5,59 +5,148 @@
             Basic Details
         </p>
         <div fxLayout="row wrap" fxLayoutAlign="space-evenly stretch">
-            <mat-form-field fxFlex="90" fxFlex.lt-sm="100" fxFlex.sm="100" appearance="outline">
-                <mat-label>Provider Address </mat-label>
-                <input matInput [(ngModel)]="data.address" required>
+            <mat-form-field fxFlex="45" fxFlex.lt-sm="100" fxFlex.sm="100" appearance="outline">
+                <mat-label>Service List</mat-label>
+                <mat-select required [(ngModel)]="data.serviceList" multiple>
+                    <mat-select-trigger>
+                        {{data.serviceList ? data.serviceList[0] : ''}}
+                        <span *ngIf="data.serviceList?.length > 1" class="example-additional-selection">
+                            (+{{data.serviceList.length - 1}}
+                            {{data.serviceList.length === 2 ? 'other' : 'others'}})
+                        </span>
+                    </mat-select-trigger>
+                    <mat-option (onSelectionChange)="Onselect(serviceList, 1, $event)"
+                        *ngFor="let serviceList of serviceList" [value]="serviceList.serNameEnglish">
+                        {{serviceList.serNameEnglish}}
+                    </mat-option>
+                </mat-select>
             </mat-form-field>
+            <mat-form-field fxFlex="45" fxFlex.lt-sm="100" fxFlex.sm="100" appearance="outline">
+                <mat-label>Qualification </mat-label>
+                <input matInput [(ngModel)]="data.qualification" required>
+            </mat-form-field>
+
         </div>
     </div>
 </div>
-<div style="padding: 30px">
-    <div fxLayout="row wrap" fxLayoutAlign="space-evenly center">
-        <mat-card fxFlex="45" fxFlex.sm="100" fxFlex.lt-sm="100" id="uploadDiv" fxLayoutAlign="center center"
-            fxLayout="column">
-            <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>{{imageList[0].slNo}} {{imageList[0].imgName}}</mat-card-title>
-            </mat-card-header>
-            <img [src]="imageList[0].fileUrl">
-            <input id="upload0" [fxShow]="false" type="file" accept=".png, .jpg, jpeg"
-                (change)="documentUpload($event, 0)">
-            <button  mat-raised-button color="primary" style="margin: 10px;
-              font-weight: bolder" (click)="uploadTrigger0()">
-                Upload <mat-icon>cloud_upload</mat-icon>
-            </button>
-        </mat-card>
-        <div fxShow.sm style="height: 100px;">
-        </div>
-        <mat-card fxFlex="45" fxFlex.sm="100" fxFlex.lt-sm="100" id="uploadDiv" fxLayoutAlign="center center"
-            fxLayout="column">
-            <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>{{imageList[1].slNo}} {{imageList[1].imgName}}</mat-card-title>
-            </mat-card-header>
-            <img [src]="imageList[1].fileUrl">
-            <input id="upload1" [fxShow]="false" type="file" accept=".png, .jpg, jpeg"
-                (change)="documentUpload($event, 1)">
-            <button mat-raised-button color="primary" style="margin: 10px; font-weight: bolder"
-                (click)="uploadTrigger1()">
-                Upload <mat-icon>cloud_upload</mat-icon>
-            </button>
-        </mat-card>
-    </div>
-    <div fxLayoutAlign="space-evenly center" style="margin-top:50px; margin-bottom: 50px;">
-        <button  mat-raised-button color="primary" style=" color:#fff;" (click)="onImageSubmit()"
-            matTooltip="Submit">
-            Submit <mat-icon>assignment</mat-icon>
+
+<div fxLayout="row wrap" fxLayoutAlign="space-evenly center">
+    <mat-card fxFlex="30" fxFlex.lt-sm="100" fxFlex.sm="100" fxLayoutAlign="center center" fxLayout="column">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{imageList[0].slNo}} {{imageList[0].imgName}}</mat-card-title>
+        </mat-card-header>
+        <img [src]="imageList[0].fileUrl">
+        <input id="upload0" [fxShow]="false" type="file" accept=".png, .jpg, jpeg, .pdf"
+            (change)="documentUploadOne($event)">
+        <button mat-raised-button color="primary" style="margin: 10px; font-weight: bolder" (click)="uploadTrigger0()">
+            Upload <mat-icon>cloud_upload</mat-icon>
         </button>
-    </div>
+    </mat-card>
 
-    <div style="margin-bottom:15px;margin-top:15px;" [fxShow]="loadImage">
-        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    </div>
-    <div style="margin-top: 10px;" fxLayoutGap="10px" fxLayout="row" fxLayoutAlign="center center">
-    </div>
+    <mat-card fxFlex="30" fxFlex.lt-sm="100" fxFlex.sm="100" fxLayoutAlign="center center" fxLayout="column">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{imageList[1].slNo}} {{imageList[1].imgName}}</mat-card-title>
+        </mat-card-header>
+        <img [src]="imageList[1].fileUrl">
+        <input id="upload1" [fxShow]="false" type="file" accept=".png, .jpg, jpeg, .pdf"
+            (change)="documentUploadTwo($event)">
+        <button mat-raised-button color="primary" style="margin: 10px; font-weight: bolder" (click)="uploadTrigger1()">
+            Upload <mat-icon>cloud_upload</mat-icon>
+        </button>
+    </mat-card>
+    <mat-card fxFlex="30" fxFlex.lt-sm="100" fxFlex.sm="100" fxLayoutAlign="center center" fxLayout="column">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{imageList[2].slNo}} {{imageList[2].imgName}}</mat-card-title>
+        </mat-card-header>
+        <img [src]="imageList[2].fileUrl">
+        <input id="upload2" [fxShow]="false" type="file" accept=".png, .jpg, jpeg, .pdf"
+            (change)="documentUploadThree($event)">
+        <div fxLayoutAlign="start start">
+            <button mat-raised-button color="primary" style="margin: 10px; font-weight: bolder"
+                (click)="uploadTrigger2()">
+                Upload <mat-icon>cloud_upload</mat-icon>
+            </button>
+            <!-- <button mat-raised-button style="background-color: green; margin-left: 5px" title="Download"
+                (click)="onDownload()">
+                
+            </button>  -->
+            <a class="button" target="_blank" href="https://medix.xlayer.in/uploads/dummy.pdf" download="document.pdf">
+
+                <button mat-raised-button color="primary" style="margin:10px" title="Download">
+                    Download <mat-icon>cloud_download</mat-icon>
+                </button>
+            </a>
+        </div>
+    </mat-card>
+
+</div>
+<div style="margin-bottom:15px;margin-top:15px;" [fxShow]="loadImage">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
 
+<div style="margin-top: 15px" fxLayout="row wrap" fxLayoutAlign="space-evenly stretch">
+    <mat-form-field fxFlex="94" fxFlex.lt-sm="100" fxFlex.sm="100" appearance="outline">
+        <mat-label>Provider Address </mat-label>
+        <input matInput [(ngModel)]="data.address" required>
+    </mat-form-field>
+</div>
+<div fxLayout="row wrap" fxLayoutAlign="space-evenly stretch">
+    <mat-form-field fxFlex="45" fxFlex.lt-sm="100" fxFlex.sm="100" appearance="outline">
+        <mat-label>District </mat-label>
+        <mat-select [(ngModel)]="data.district" required>
+            <mat-option (click)="onChange(data.district)" *ngFor="let dis_data of districts"
+                [value]="dis_data.districtName">
+                {{dis_data.districtName}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
 
+    <mat-form-field fxFlex="45" fxFlex.lt-sm="100" fxFlex.sm="100" appearance="outline">
+        <mat-label>Service List</mat-label>
+        <mat-select required [(ngModel)]="data.areaofoperation" multiple>
+            <mat-select-trigger>
+                {{data.areaofoperation ? data.areaofoperation[0] : ''}}
+                <span *ngIf="data.areaofoperation?.length > 1" class="example-additional-selection">
+                    (+{{data.areaofoperation.length - 1}}
+                    {{data.areaofoperation.length === 2 ? 'More' : 'More'}})
+                </span>
+            </mat-select-trigger>
+            <mat-option (onSelectionChange)="Onselect(data, 2, $event)" *ngFor="let data of pincode"
+                [value]="data.pincode">
+                {{data.placeName}} {{data.pincode}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+</div>
+<div fxLayout="column" style="padding: 30px" fxLayoutAlign="start start">
+    <mat-checkbox [(ngModel)]="data.checkbox" (change)="onClickHandler($event)"> I have read and agree to the Terms &
+        conditions
+    </mat-checkbox>
+</div>
+
+<div fxLayout="column" fxLayoutAlign="end end">
+    <!-- <mat-label style="padding-right:100px">Upload Signature</mat-label>
+    <input type="file" (change)="upload($event.target.files)" /> -->
+
+    <mat-card fxFlex="30" fxFlex.lt-sm="100" fxFlex.sm="100" fxLayoutAlign="center center" fxLayout="column">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{imageList[3].slNo}} {{imageList[3].imgName}}</mat-card-title>
+        </mat-card-header>
+        <img class="img" [src]="imageList[3].fileUrl">
+        <input id="upload3" [fxShow]="false" type="file" accept=".png, .jpg, jpeg, .pdf"
+            (change)="documentUploadFour($event)">
+        <button mat-raised-button color="primary" style="margin: 10px; font-weight: bolder" (click)="uploadTrigger3()">
+            Upload <mat-icon>cloud_upload</mat-icon>
+        </button>
+    </mat-card>
+</div>
+<div fxLayoutAlign="space-evenly center">
+    <button mat-raised-button color="primary" style=" color:#fff;" (click)="onImageSubmit()" matTooltip="Submit">
+        Submit <mat-icon>assignment</mat-icon>
+    </button>
+</div>
 <router-outlet></router-outlet>
