--- a/static/Registration/RegImgForm/src/app/app.component.scss
+++ b/static/Registration/RegImgForm/src/app/app.component.scss
@@ -5,6 +5,16 @@ img {
   min-width: 300px;
   padding: 10px;
   margin-top: 10px;
+  border-radius: 20px;
+}
+.img {
+  min-height: 100px;
+  max-height: 100px;
+  max-width: 100x;
+  min-width: 100px;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 20px;
 }
 .uploadButton {
   margin: 4px;
@@ -21,8 +31,7 @@ h2 {
 .example-card {
   max-height: 300px;
   overflow-y: auto;
- 
-} 
+}
 @media only screen and (max-width: 480px) {
   img {
     min-height: 240px;
@@ -30,17 +39,31 @@ h2 {
     max-width: 290px;
     min-width: 290px;
     padding: 10px;
+    border-radius: 20px;
   }
   mat-card {
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
   }
   .serif {
     font-family: "Times New Roman", Times, serif;
   }
- 
+
   .button:hover {
     background-color: gray;
   }
-  
+  .example-h2 {
+    margin: 10px;
+  }
+
+  .example-section {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 60px;
+  }
+
+  .example-margin {
+    margin: 0 10px;
+  }
 }
