service provider Registration form listing in admin

--- a/portal/admin/src/app/components/tables/service-provider/service-provider-details-info/service-provider-details-info.component.scss
+++ b/portal/admin/src/app/components/tables/service-provider/service-provider-details-info/service-provider-details-info.component.scss
@@ -1,11 +1,13 @@
 mat-card {
   height: auto;
   width: auto;
+  margin: 10px;
 }
 
 img {
   width: 200px;
   height: 200px;
+  border-radius: 20px;
 }
 
 mat-card-title {
