--- a/portal/service_provider/src/app/authorization/service-options/service-options.component.scss
+++ b/portal/service_provider/src/app/authorization/service-options/service-options.component.scss
@@ -6,7 +6,7 @@
   height: 100%;
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("../../../assets/images/backgrounds/dashboard_background.jpg") no-repeat center
+    url("https://medix.xlayer.in/uploads/ohzasserviceprovider.jpg") no-repeat center
       center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
