Minor changes in admin portal

--- a/portal/admin/src/app/components/tables/service-provider/service-provider-details-info/service-provider-details-info.component.html
+++ b/portal/admin/src/app/components/tables/service-provider/service-provider-details-info/service-provider-details-info.component.html
@@ -25,7 +25,7 @@
       <div style="height: 300px; overflow: auto; margin-bottom: 10px;">
         <div fxLayout="row" fxLayoutAlign="space-around center" >
           <mat-card fxFlex="45">
-          <p class="p_type"> Face Proof </p>
+          <p class="p_type"> Profile Picture </p>
           <div fxLayoutAlign="center center">
             <img [src]="data.image_url">
 
